--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Welcome to My First Website</h1>
     <p>This is my first website using GitHub Pages!</p>
+    <script src="script.js"></script>
 </body>
 </html>
