--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My First Website</h1>
+    <h1>Welcome to YC-EduNotes!</h1>
+    <h2>What You Can DDo on YC-EduNotes</h2>
+    <ul>
+        <li><h3>Access Quality Notes:</h3>Browse through a wide range of subbjects and topics.
+            Our notes are contributed by students and verified by educators to ensure accuracy and relevance.</li>
+        <li><h3>Contribute Your Notes:</h3> Have some great notes or study guides? 
+            Share them with your peers!
+        Your contributions can help otehrs succeed.</li>
+        <li><h3>Collaborate and Learn:</h3> Join study groups, collaborate on projects, and discuss topics with fellow students.</li>
+    </ul>
     <p>This is my first website using GitHub Pages!</p>
     <script src="script.js"></script>
 </body>
