--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Welcome to YC-EduNotes!</h1>
-    <h2>What You Can DDo on YC-EduNotes</h2>
+    <h2>What You Can Do on YC-EduNotes</h2>
     <ul>
         <li><h3>Access Quality Notes:</h3>Browse through a wide range of subbjects and topics.
             Our notes are contributed by students and verified by educators to ensure accuracy and relevance.</li>
